Feature/cron 55 (#26)
* CRO-55: Refactor header position, add getting current ido, add countdown cmp

* CRO-55: Add getting user info datas for ido details
