# src/modules/ido/containers/TokenInfoCard/TokenIfoCard.types.ts
@@ -1,7 +1,0 @@
-export type TokenInfoDataProps = {
-  tokenName: string;
-  tokenSymbol: string;
-  decimals: number;
-  address: string;
-  totalSupply: number;
-};
