# swagger-schema.json
@@ -1,1 +1,263 @@
-{"swagger":"2.0","info":{"title":"CRONOS","description":"API for cronos platform","version":"v1"},"host":"devcronos.rocknblock.io","schemes":["https"],"basePath":"/api/v1","consumes":["application/json"],"produces":["application/json"],"securityDefinitions":{"Basic":{"type":"basic"}},"security":[{"Basic":[]}],"paths":{"/create_ido/":{"post":{"operationId":"create_ido_create","description":"View will be deprecated","parameters":[{"name":"data","in":"body","required":true,"schema":{"type":"object","properties":{"owner":{"type":"string","default":false},"project_name":{"type":"string","default":false},"token_name":{"type":"string","default":false},"token_symbol":{"type":"string","default":false},"total_supply":{"type":"integer","default":false},"token_address":{"type":"string","default":false},"vesting":{"type":"boolean","default":false},"start_unlock_percent":{"type":"integer","default":false},"unlock_percent":{"type":"integer","default":false},"unlock_step_time":{"type":"integer","default":false},"start":{"type":"string","format":"date-time","default":false},"end":{"type":"string","format":"date-time","default":false},"price":{"type":"integer","default":false},"hard_cap":{"type":"integer","default":false},"soft_cap":{"type":"integer","default":false}}}}],"responses":{"201":{"description":"Success"},"503":{"description":"Error"}},"tags":["create_ido"]},"parameters":[]},"/get_ido_list/":{"get":{"operationId":"get_ido_list_list","description":"List all ido","parameters":[],"responses":{"200":{"description":""}},"tags":["get_ido_list"]},"parameters":[]},"/get_proof/":{"post":{"operationId":"get_proof_create","description":"Calculate and return proof","parameters":[{"name":"data","in":"body","required":true,"schema":{"type":"object","properties":{"address":{"type":"string","default":false},"ido_id":{"type":"integer","default":false}}}}],"responses":{"200":{"description":"Success"},"503":{"description":"Error"}},"tags":["get_proof"]},"parameters":[]},"/get_top_investors/":{"get":{"operationId":"get_top_investors_list","description":"","parameters":[],"responses":{"200":{"description":"","schema":{"type":"array","items":{"$ref":"#/definitions/Investor"}}}},"tags":["get_top_investors"]},"parameters":[]},"/ido/{id}/":{"get":{"operationId":"ido_read","description":"IDO detail","parameters":[],"responses":{"200":{"description":"","schema":{"$ref":"#/definitions/IDO"}}},"tags":["ido"]},"parameters":[{"name":"id","in":"path","required":true,"type":"string"}]},"/investor_allocation/":{"get":{"operationId":"investor_allocation_list","description":"","parameters":[],"responses":{"200":{"description":""}},"tags":["investor_allocation"]},"parameters":[]},"/investor_profile/{address}":{"get":{"operationId":"investor_profile_read","description":"","parameters":[],"responses":{"200":{"description":"","schema":{"$ref":"#/definitions/Investor"}}},"tags":["investor_profile"]},"parameters":[{"name":"address","in":"path","required":true,"type":"string"}]},"/registration/":{"post":{"operationId":"registration_create","description":"Investor registration to IDO","parameters":[{"name":"data","in":"body","required":true,"schema":{"type":"object","properties":{"address":{"type":"string","default":false}}}}],"responses":{"200":{"description":"Success"},"503":{"description":"Error"}},"tags":["registration"]},"parameters":[]},"/registration_to_ido/":{"post":{"operationId":"registration_to_ido_create","description":"Investor registration to IDO","parameters":[{"name":"data","in":"body","required":true,"schema":{"type":"object","properties":{"pk":{"type":"integer","default":false},"address":{"type":"string","default":false}}}}],"responses":{"200":{"description":"Success"},"503":{"description":"Error"}},"tags":["registration_to_ido"]},"parameters":[]}},"definitions":{"Investor":{"required":["address","stakeAmount","positionDelta","lastStaked"],"type":"object","properties":{"address":{"title":"Address","type":"string","maxLength":64,"minLength":1},"stakeAmount":{"title":"Stake amount","type":"string","format":"decimal"},"positionDelta":{"title":"Position delta","type":"integer"},"lastStaked":{"title":"Last staked","type":"string"}}},"Tokenomic":{"required":["title","percent"],"type":"object","properties":{"id":{"title":"ID","type":"integer","readOnly":true},"title":{"title":"Title","type":"string","maxLength":64,"minLength":1},"percent":{"title":"Percent","type":"integer","maximum":2147483647,"minimum":0}}},"IDO":{"required":["videoUrl","projectName","tokenName","tokenSymbol","totalSupply","tokenAddress","start","end","price","softCap","hardCap","totalBought","discord","medium","telegram","twitter","projectSummary","roadmap","timer"],"type":"object","properties":{"id":{"title":"Id","type":"integer","readOnly":true},"videoUrl":{"title":"Video url","type":"string","maxLength":256,"minLength":1},"logoUrl":{"title":"Logo url","type":"string","readOnly":true},"projectName":{"title":"Project name","type":"string","maxLength":64,"minLength":1},"tokenName":{"title":"Token name","type":"string","maxLength":64,"minLength":1},"tokenSymbol":{"title":"Token symbol","type":"string","maxLength":4,"minLength":1},"totalSupply":{"title":"Total supply","type":"string","maxLength":128,"minLength":1},"tokenAddress":{"title":"Token address","type":"string","maxLength":64,"minLength":1},"isPublic":{"title":"Is public","type":"boolean"},"vesting":{"title":"Vesting","type":"boolean"},"startUnlockPercent":{"title":"Startunlockpercent","type":"integer"},"unlockPercent":{"title":"Unlockpercent","type":"integer"},"unlockStepTime":{"title":"Unlocksteptime","type":"integer"},"start":{"title":"Start","type":"string"},"end":{"title":"End","type":"string"},"price":{"title":"Price","type":"string","maxLength":128,"minLength":1},"status":{"title":"Status","type":"string","readOnly":true},"softCap":{"title":"Soft cap","type":"string","maxLength":128,"minLength":1},"hardCap":{"title":"Hard cap","type":"string","maxLength":128,"minLength":1},"totalBought":{"title":"Total bought","type":"string","minLength":1},"investor":{"title":"Investor","type":"string","readOnly":true},"owner":{"title":"Owner","type":"integer","readOnly":true},"ownerAddress":{"title":"Owner address","type":"string","readOnly":true},"discord":{"title":"Discord","type":"string","maxLength":256,"minLength":1},"medium":{"title":"Medium","type":"string","maxLength":256,"minLength":1},"telegram":{"title":"Telegram","type":"string","maxLength":256,"minLength":1},"twitter":{"title":"Twitter","type":"string","maxLength":256,"minLength":1},"tokenomics":{"type":"array","items":{"$ref":"#/definitions/Tokenomic"},"readOnly":true},"projectSummary":{"title":"Project summary","type":"string","minLength":1},"roadmap":{"title":"Roadmap","type":"string","minLength":1},"tokenLogoUrl":{"title":"Token logo url","type":"string","readOnly":true},"targetedRaise":{"title":"Targeted raise","type":"string","readOnly":true},"timer":{"title":"Timer","type":"string"},"decimals":{"title":"Decimals","type":"integer","default":18},"investors":{"title":"Investors","type":"string","readOnly":true}}}}}
+{
+  "swagger": "2.0",
+  "info": { "title": "CRONOS", "description": "API for cronos platform", "version": "v1" },
+  "host": "devcronos.rocknblock.io",
+  "schemes": ["https"],
+  "basePath": "/api/v1",
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
+  "securityDefinitions": { "Basic": { "type": "basic" } },
+  "security": [{ "Basic": [] }],
+  "paths": {
+    "/create_ido/": {
+      "post": {
+        "operationId": "create_ido_create",
+        "description": "View will be deprecated",
+        "parameters": [
+          {
+            "name": "data",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "owner": { "type": "string", "default": false },
+                "project_name": { "type": "string", "default": false },
+                "token_name": { "type": "string", "default": false },
+                "token_symbol": { "type": "string", "default": false },
+                "total_supply": { "type": "integer", "default": false },
+                "token_address": { "type": "string", "default": false },
+                "vesting": { "type": "boolean", "default": false },
+                "start_unlock_percent": { "type": "integer", "default": false },
+                "unlock_percent": { "type": "integer", "default": false },
+                "unlock_step_time": { "type": "integer", "default": false },
+                "start": { "type": "string", "format": "date-time", "default": false },
+                "end": { "type": "string", "format": "date-time", "default": false },
+                "price": { "type": "integer", "default": false },
+                "hard_cap": { "type": "integer", "default": false },
+                "soft_cap": { "type": "integer", "default": false }
+              }
+            }
+          }
+        ],
+        "responses": { "201": { "description": "Success" }, "503": { "description": "Error" } },
+        "tags": ["create_ido"]
+      },
+      "parameters": []
+    },
+    "/get_ido_from_owner/{address}/": {
+      "get": {
+        "operationId": "get_ido_from_owner_read",
+        "description": "IDO detail",
+        "parameters": [],
+        "responses": { "200": { "description": "", "schema": { "$ref": "#/definitions/IDO" } } },
+        "tags": ["get_ido_from_owner"]
+      },
+      "parameters": [{ "name": "address", "in": "path", "required": true, "type": "string" }]
+    },
+    "/get_ido_list/": {
+      "get": {
+        "operationId": "get_ido_list_list",
+        "description": "List all ido",
+        "parameters": [],
+        "responses": { "200": { "description": "" } },
+        "tags": ["get_ido_list"]
+      },
+      "parameters": []
+    },
+    "/get_proof/": {
+      "post": {
+        "operationId": "get_proof_create",
+        "description": "Calculate and return proof",
+        "parameters": [
+          {
+            "name": "data",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "address": { "type": "string", "default": false },
+                "ido_id": { "type": "integer", "default": false }
+              }
+            }
+          }
+        ],
+        "responses": { "200": { "description": "Success" }, "503": { "description": "Error" } },
+        "tags": ["get_proof"]
+      },
+      "parameters": []
+    },
+    "/get_top_investors/": {
+      "get": {
+        "operationId": "get_top_investors_list",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": { "description": "", "schema": { "type": "array", "items": { "$ref": "#/definitions/Investor" } } }
+        },
+        "tags": ["get_top_investors"]
+      },
+      "parameters": []
+    },
+    "/get_user_idos/{address}/": {
+      "get": {
+        "operationId": "get_user_idos_read",
+        "description": "IDO detail",
+        "parameters": [],
+        "responses": { "200": { "description": "", "schema": { "$ref": "#/definitions/IDO" } } },
+        "tags": ["get_user_idos"]
+      },
+      "parameters": [{ "name": "address", "in": "path", "required": true, "type": "string" }]
+    },
+    "/ido/{id}/": {
+      "get": {
+        "operationId": "ido_read",
+        "description": "IDO detail",
+        "parameters": [],
+        "responses": { "200": { "description": "", "schema": { "$ref": "#/definitions/IDO" } } },
+        "tags": ["ido"]
+      },
+      "parameters": [{ "name": "id", "in": "path", "required": true, "type": "string" }]
+    },
+    "/investor_allocation/": {
+      "get": {
+        "operationId": "investor_allocation_list",
+        "description": "",
+        "parameters": [],
+        "responses": { "200": { "description": "" } },
+        "tags": ["investor_allocation"]
+      },
+      "parameters": []
+    },
+    "/investor_profile/{address}": {
+      "get": {
+        "operationId": "investor_profile_read",
+        "description": "",
+        "parameters": [],
+        "responses": { "200": { "description": "", "schema": { "$ref": "#/definitions/Investor" } } },
+        "tags": ["investor_profile"]
+      },
+      "parameters": [{ "name": "address", "in": "path", "required": true, "type": "string" }]
+    },
+    "/registration/": {
+      "post": {
+        "operationId": "registration_create",
+        "description": "Investor registration to IDO",
+        "parameters": [
+          {
+            "name": "data",
+            "in": "body",
+            "required": true,
+            "schema": { "type": "object", "properties": { "address": { "type": "string", "default": false } } }
+          }
+        ],
+        "responses": { "200": { "description": "Success" }, "503": { "description": "Error" } },
+        "tags": ["registration"]
+      },
+      "parameters": []
+    },
+    "/registration_to_ido/": {
+      "post": {
+        "operationId": "registration_to_ido_create",
+        "description": "Investor registration to IDO",
+        "parameters": [
+          {
+            "name": "data",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "pk": { "type": "integer", "default": false },
+                "address": { "type": "string", "default": false }
+              }
+            }
+          }
+        ],
+        "responses": { "200": { "description": "Success" }, "503": { "description": "Error" } },
+        "tags": ["registration_to_ido"]
+      },
+      "parameters": []
+    }
+  },
+  "definitions": {
+    "Tokenomic": {
+      "required": ["title", "percent"],
+      "type": "object",
+      "properties": {
+        "id": { "title": "ID", "type": "integer", "readOnly": true },
+        "title": { "title": "Title", "type": "string", "maxLength": 64, "minLength": 1 },
+        "percent": { "title": "Percent", "type": "integer", "maximum": 2147483647, "minimum": 0 }
+      }
+    },
+    "IDO": {
+      "required": [
+        "videoUrl",
+        "projectName",
+        "tokenName",
+        "tokenSymbol",
+        "totalSupply",
+        "tokenAddress",
+        "start",
+        "end",
+        "price",
+        "softCap",
+        "hardCap",
+        "totalBought",
+        "discord",
+        "medium",
+        "telegram",
+        "twitter",
+        "projectSummary",
+        "roadmap",
+        "timer"
+      ],
+      "type": "object",
+      "properties": {
+        "id": { "title": "Id", "type": "integer", "readOnly": true },
+        "videoUrl": { "title": "Video url", "type": "string", "maxLength": 256, "minLength": 1 },
+        "logoUrl": { "title": "Logo url", "type": "string", "readOnly": true },
+        "projectName": { "title": "Project name", "type": "string", "maxLength": 64, "minLength": 1 },
+        "tokenName": { "title": "Token name", "type": "string", "maxLength": 64, "minLength": 1 },
+        "tokenSymbol": { "title": "Token symbol", "type": "string", "maxLength": 4, "minLength": 1 },
+        "totalSupply": { "title": "Total supply", "type": "integer" },
+        "tokenAddress": { "title": "Token address", "type": "string", "maxLength": 64, "minLength": 1 },
+        "public": { "title": "Public", "type": "boolean" },
+        "vesting": { "title": "Vesting", "type": "boolean" },
+        "startUnlockPercent": { "title": "Startunlockpercent", "type": "integer" },
+        "unlockPercent": { "title": "Unlockpercent", "type": "integer" },
+        "unlockStepTime": { "title": "Unlocksteptime", "type": "integer" },
+        "start": { "title": "Start", "type": "string" },
+        "end": { "title": "End", "type": "string" },
+        "price": { "title": "Price", "type": "string", "format": "decimal" },
+        "status": { "title": "Status", "type": "string", "readOnly": true },
+        "softCap": { "title": "Soft cap", "type": "string", "format": "decimal" },
+        "hardCap": { "title": "Hard cap", "type": "string", "format": "decimal" },
+        "totalBought": { "title": "Total bought", "type": "string", "minLength": 1 },
+        "investor": { "title": "Investor", "type": "string", "readOnly": true },
+        "owner": { "title": "Owner", "type": "integer", "readOnly": true },
+        "ownerAddress": { "title": "Owner address", "type": "string", "readOnly": true },
+        "discord": { "title": "Discord", "type": "string", "maxLength": 256, "minLength": 1 },
+        "medium": { "title": "Medium", "type": "string", "maxLength": 256, "minLength": 1 },
+        "telegram": { "title": "Telegram", "type": "string", "maxLength": 256, "minLength": 1 },
+        "twitter": { "title": "Twitter", "type": "string", "maxLength": 256, "minLength": 1 },
+        "tokenomics": { "type": "array", "items": { "$ref": "#/definitions/Tokenomic" }, "readOnly": true },
+        "projectSummary": { "title": "Project summary", "type": "string", "minLength": 1 },
+        "roadmap": { "title": "Roadmap", "type": "string", "minLength": 1 },
+        "tokenLogoUrl": { "title": "Token logo url", "type": "string", "readOnly": true },
+        "timer": { "title": "Timer", "type": "string" }
+      }
+    },
+    "Investor": {
+      "required": ["address", "stakeAmount", "positionDelta", "lastStaked"],
+      "type": "object",
+      "properties": {
+        "address": { "title": "Address", "type": "string", "maxLength": 64, "minLength": 1 },
+        "stakeAmount": { "title": "Stake amount", "type": "string", "format": "decimal" },
+        "positionDelta": { "title": "Position delta", "type": "integer" },
+        "lastStaked": { "title": "Last staked", "type": "string" }
+      }
+    }
+  }
+}
